Quorum3/Library/Tests/Expressions/Pass/InputTest.quorum
class Main
    action Main
        text name = input("Enter your name:")
        output name
    end
end