Quorum3/Library/Tests/Expressions/Fail/FakeAction.quorum
class Main
    action Main
        A a1
        A a2
        a1:field = "text" + a2:FakeAction()
    end
end